# simojio

./: CONTRIBUTING.md  LICENSE  README.md  enviroment.yaml  pyproject.toml  setup.py  simoji_builder.spec
SimojiWeb/: app.py
simoji/: main.py
simoji/lib/: BasicFunctions.py  CallbackContainer.py  CompleteLayer.py  ExpressionsValuesContainer.py  GlobalSettingsContainer.py  Layer.py  ModuleExecutor.py  ModuleInputContainer.py  ModuleLoader.py  ModuleParameterContainer.py  MyNode.py  OptimizationResultsContainer.py  OptimizationSettingsContainer.py  ParameterContainer.py  ParameterValuesContainer.py  PlotContainer.py  ProcessManager.py  Sample.py  SettingManager.py  VariablesValuesContainer.py  VariationContainer.py  VariationContainerDataset.py  VariationContainerEvaluationSet.py  VariationResultsContainer.py  icon_path.py
simoji/lib/abstract_modules/: AbstractModule.py  Calculator.py  Fitter.py  Reader.py  Simulator.py  __init__.py
simoji/lib/enums/: LayerType.py  ParameterCategory.py
simoji/lib/gui/: Buttons.py  CustomTabs.py  Dialogs.py  GeometryAndPreferencesManager.py  MainWindow.py  OptionsWidget.py  (+4 more)
simoji/settings/: latest_setting.json
simojio/: main.py
simojio/lib/: BasicFunctions.py  CompleteLayer.py  ExpressionsValuesContainer.py  GlobalSettingsContainer.py  Layer.py  ModuleLoader.py  ModuleParameterContainer.py  OptimizationSettingsContainer.py  ParameterContainer.py  ParameterValuesContainer.py  PlotContainer.py  Sample.py  SettingManager.py  VariablesValuesContainer.py  VariationContainer.py  VariationContainerEvaluationSet.py  icon_path.py
(+227 files in other folders)
